funcional sin mail send